Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81322

[REG: 5.12.4->5.12.5] QWebEngineView inside QScrollArea consumes wheel events

XMLWordPrintable

    • f36ae86ec88bb756da93992bdd12f0fe596f2263 (qt/qtwebengine/5.15.0)

      QWebEngineView in QScrollArea is not scrollable anymore with mouse wheel. To reproduce, run attached example and try to scroll using mouse wheel while hovering over the view.

        1. qtbug81322.zip
          0.9 kB
          Joni Poikelin
        For Gerrit Dashboard: QTBUG-81322
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            poikelin Joni Poikelin
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes