Forward unhandled scroll events

Fixes a regression in webengine stealing all wheel events.

Fixes: QTBUG-81322
Change-Id: I0176627f3e13d97f55162f70fc7a969f98f4f444
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>