src/webenginewidgets/render_widget_host_view_qt_delegate_widget.cpp
@@ -474,9 +474,14 @@ bool RenderWidgetHostViewQtDelegateWidget::event(QEvent *event)
 
     if (!handled)
         return QQuickWidget::event(event);
-    // Most events are accepted by default, but tablet events are not:
     event->accept();
     return true;
+}
+
+void RenderWidgetHostViewQtDelegateWidget::unhandledWheelEvent(QWheelEvent *ev)
+{
+    if (QWidget *p = parentWidget())
+        qApp->sendEvent(p, ev);
 }
 
 void RenderWidgetHostViewQtDelegateWidget::onWindowPosChanged()
